--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML5>
 <html>
 	<head>
-		<title> MEGMINO </title>
+		<title> Http Domino </title>
 		
 		<link rel="stylesheet" href="style.css">
 	</head>
